tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/nested-brackets-open.stderr
TOML parse error at line 1, column 3
  |
1 | [a[b]
  |   ^
invalid table header
expected `.`, `]`
